now with trying to fix scrollbar on windows

--- a/src/Styles/General.scss
+++ b/src/Styles/General.scss
@@ -13,6 +13,11 @@ html {
   font-size: 62.5%;
 }
 
+::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 body {
   font-family: "Prophet";
   height: 100%;
